--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_title_/returns_bibjson/with_metadata_section.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_title_/returns_bibjson/with_metadata_section.yml
@@ -7,8 +7,8 @@ http_interactions:
       encoding: UTF-8
       string: |-
         <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
+            <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <xmlQuery><![CDATA[
                <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/
               XMLSchema">
                 <Criterion ConjunctionOperator="AND">
@@ -29,7 +29,7 @@ http_interactions:
                <MaximumRows>20</MaximumRows>
               </query>
               ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
+            </ScienceWireQueryXMLParameter>
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -38,7 +38,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:11:04 GMT
+      - Thu, 02 Jun 2016 22:12:51 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -67,7 +67,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:11:04 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
       - '279'
     body:
@@ -76,10 +76,10 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>41171</queryID>\r\n
         \ <queryResultRows>20</queryResultRows>\r\n  <totalRows>20</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:11:04 GMT
+  recorded_at: Thu, 02 Jun 2016 22:12:51 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/41171?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/41171?format=xml&page=0&pageSize=20&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -91,7 +91,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:11:04 GMT
+      - Thu, 02 Jun 2016 22:12:51 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -120,7 +120,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:11:04 GMT
+      - Thu, 02 Jun 2016 22:12:52 GMT
       Content-Length:
       - '64416'
     body:
@@ -879,5 +879,5 @@ http_interactions:
         \   <CopyrightStateProvince />\r\n    <CopyrightCountry>JAPAN</CopyrightCountry>\r\n
         \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:11:05 GMT
+  recorded_at: Thu, 02 Jun 2016 22:12:52 GMT
 recorded_with: VCR 3.0.1
