--- a/fixtures/vcr_cassettes/ScienceWireClient/_get_full_sciencewire_pubs_for_wos_ids/returns_a_Nokogiri_XML_Document_containing_all_SW_pubs_when_passed_an_array_of_WebOfScience_ids.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_get_full_sciencewire_pubs_for_wos_ids/returns_a_Nokogiri_XML_Document_containing_all_SW_pubs_when_passed_an_array_of_WebOfScience_ids.yml
@@ -7,8 +7,8 @@ http_interactions:
       encoding: UTF-8
       string: |-
         <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
+            <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <xmlQuery><![CDATA[
               <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                 <Criterion ConjunctionOperator="AND">
                   <Criteria>
@@ -32,7 +32,7 @@ http_interactions:
                   </Columns>
                 </query>
             ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
+            </ScienceWireQueryXMLParameter>
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -41,7 +41,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:12:31 GMT
+      - Thu, 02 Jun 2016 22:12:01 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -70,7 +70,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:12:31 GMT
+      - Thu, 02 Jun 2016 22:12:02 GMT
       Content-Length:
       - '277'
     body:
@@ -79,10 +79,10 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>81941</queryID>\r\n
         \ <queryResultRows>3</queryResultRows>\r\n  <totalRows>3</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:12:31 GMT
+  recorded_at: Thu, 02 Jun 2016 22:12:02 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=3&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -94,7 +94,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:12:31 GMT
+      - Thu, 02 Jun 2016 22:12:02 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -123,7 +123,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:12:31 GMT
+      - Thu, 02 Jun 2016 22:12:02 GMT
       Content-Length:
       - '9645'
     body:
@@ -241,5 +241,5 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:12:32 GMT
+  recorded_at: Thu, 02 Jun 2016 22:12:02 GMT
 recorded_with: VCR 3.0.1
