--- a/fixtures/vcr_cassettes/ScienceWireClient/_get_sciencewire_id_suggestions/returns_suggestions_for_email_address_and_name.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_get_sciencewire_id_suggestions/returns_suggestions_for_email_address_and_name.yml
@@ -5,30 +5,13 @@ http_interactions:
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
     body:
       encoding: UTF-8
-      string: |
-        <?xml version='1.0'?>
-        <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
-          xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
-        <Authors>
-          <Author>
-            <LastName>edler</LastName>
-            <FirstName>alice</FirstName>
-            <MiddleName></MiddleName>
-            <City>Stanford</City>
-            <State>CA</State>
-            <Country>USA</Country>
-            <Version>1</Version>
-          </Author>
-        </Authors>
-        <DocumentCategory>Journal Document</DocumentCategory>
-        <Emails>
-          <string>alice.edler@stanford.edu</string>
-        </Emails>
-        <PublicationItemIds>
-          <int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int>
-        </PublicationItemIds>
-          <LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly>
-        </PublicationAuthorMatchParameters>
+      string: "<?xml version='1.0'?>\n<PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'\n
+        \ xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n<Authors>\n  <Author>\n    <LastName>edler</LastName>\n
+        \   <FirstName>alice</FirstName>\n    <MiddleName></MiddleName>\n    \n    <Version>1</Version>\n
+        \ </Author>\n</Authors>\n<DocumentCategory>Journal Document</DocumentCategory>\n<Emails>\n
+        \ <string>alice.edler@stanford.edu</string>\n</Emails>\n<PublicationItemIds>\n
+        \ <int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int>\n</PublicationItemIds>\n
+        \ <LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly>\n</PublicationAuthorMatchParameters>\n"
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -37,7 +20,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:12:29 GMT
+      - Thu, 02 Jun 2016 22:12:02 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,52 +49,33 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:12:30 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
-      - '876'
+      - '701'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
         \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>29352378</PublicationItemID>\r\n
-        \   <MatchScore>1.2708333730697632</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \   <MatchScore>0.70833337306976318</MatchScore>\r\n  </ItemMatchResult>\r\n
         \ <ItemMatchResult>\r\n    <MatchRank>2</MatchRank>\r\n    <PublicationItemID>29187981</PublicationItemID>\r\n
-        \   <MatchScore>0.99226635694503784</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \   <MatchScore>0.42976635694503784</MatchScore>\r\n  </ItemMatchResult>\r\n
         \ <ItemMatchResult>\r\n    <MatchRank>3</MatchRank>\r\n    <PublicationItemID>46795732</PublicationItemID>\r\n
-        \   <MatchScore>0.51962459087371826</MatchScore>\r\n  </ItemMatchResult>\r\n
-        \ <ItemMatchResult>\r\n    <MatchRank>4</MatchRank>\r\n    <PublicationItemID>47593787</PublicationItemID>\r\n
-        \   <MatchScore>0.49845153093338013</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+        \   <MatchScore>0.14462457597255707</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:12:30 GMT
+  recorded_at: Thu, 02 Jun 2016 22:12:04 GMT
 - request:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
     body:
       encoding: UTF-8
-      string: |
-        <?xml version='1.0'?>
-        <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
-          xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
-        <Authors>
-          <Author>
-            <LastName>edler</LastName>
-            <FirstName>alice</FirstName>
-            <MiddleName></MiddleName>
-            <City>Stanford</City>
-            <State>CA</State>
-            <Country>USA</Country>
-            <Version>1</Version>
-          </Author>
-        </Authors>
-        <DocumentCategory>Conference Proceeding Document</DocumentCategory>
-        <Emails>
-          <string>alice.edler@stanford.edu</string>
-        </Emails>
-        <PublicationItemIds>
-          <int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int>
-        </PublicationItemIds>
-          <LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly>
-        </PublicationAuthorMatchParameters>
+      string: "<?xml version='1.0'?>\n<PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'\n
+        \ xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n<Authors>\n  <Author>\n    <LastName>edler</LastName>\n
+        \   <FirstName>alice</FirstName>\n    <MiddleName></MiddleName>\n    \n    <Version>1</Version>\n
+        \ </Author>\n</Authors>\n<DocumentCategory>Conference Proceeding Document</DocumentCategory>\n<Emails>\n
+        \ <string>alice.edler@stanford.edu</string>\n</Emails>\n<PublicationItemIds>\n
+        \ <int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int>\n</PublicationItemIds>\n
+        \ <LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly>\n</PublicationAuthorMatchParameters>\n"
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -120,7 +84,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:12:30 GMT
+      - Thu, 02 Jun 2016 22:12:04 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -149,7 +113,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:12:31 GMT
+      - Thu, 02 Jun 2016 22:12:04 GMT
       Content-Length:
       - '349'
     body:
@@ -157,7 +121,7 @@ http_interactions:
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
         \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>10389828</PublicationItemID>\r\n
-        \   <MatchScore>0.35025802254676819</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+        \   <MatchScore>0.11588302254676819</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:12:31 GMT
+  recorded_at: Thu, 02 Jun 2016 22:12:04 GMT
 recorded_with: VCR 3.0.1
