--- a/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_uncommon_last_name_first_name_and_max_rows_4/returns_an_empty_array.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_uncommon_last_name_first_name_and_max_rows_4/returns_an_empty_array.yml
@@ -5,30 +5,27 @@ http_interactions:
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>          <![CDATA[\n
+      string: "<?xml version=\"1.0\"?>\n    <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n    <xmlQuery>          <![CDATA[\n
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
-        \               <QueryPredicate>(\"ottawa,yukon\" or \"OTTAWA,Y\") and \"stanford\"</QueryPredicate>\n
+        \               <QueryPredicate>\"ottawa,\" or \"OTTAWA,\" or \"OTTAWA,Y\"</QueryPredicate>\n
         \               <SearchType>ExactMatch</SearchType>\n                <Columns>AggregateText</Columns>\n
         \               <MaximumRows>4</MaximumRows>\n              </TextSearch>\n
         \           </Criterion>\n\n                                <Criterion>\n
         \               <Filter>\n                  <Column>AuthorLastName</Column>\n
         \                 <Operator>BeginsWith</Operator>\n                  <Value>OTTAWA</Value>\n
-        \               </Filter>\n              </Criterion>\n\n                                <Criterion>\n
-        \               <Filter>\n                  <Column>AuthorFirstName</Column>\n
-        \                 <Operator>BeginsWith</Operator>\n                  <Value>Y</Value>\n
         \               </Filter>\n              </Criterion>\n\n                  \n
-        \                 \n                              <Criterion>\n              <Filter>\n
-        \               <Column>DocumentCategory</Column>\n                <Operator>In</Operator>\n
-        \               <Values>\n                  <Value>Journal Document</Value>\n
-        \                 <Value>Conference Proceeding Document</Value>\n                </Values>\n
-        \             </Filter>\n            </Criterion>\n\n                </Criteria>\n
-        \             </Criterion>\n                          <Columns>\n              <SortColumn>\n
-        \               <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
+        \                 \n                  \n                              <Criterion>\n
+        \             <Filter>\n                <Column>DocumentCategory</Column>\n
+        \               <Operator>In</Operator>\n                <Values>\n                  <Value>Journal
+        Document</Value>\n                  <Value>Conference Proceeding Document</Value>\n
+        \               </Values>\n              </Filter>\n            </Criterion>\n\n
+        \               </Criteria>\n              </Criterion>\n                          <Columns>\n
+        \             <SortColumn>\n                <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
         \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>4</MaximumRows>\n
-        \           </query>\n\n            ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+        \           </query>\n\n            ]]>\n</xmlQuery>\n    </ScienceWireQueryXMLParameter>"
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -37,7 +34,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:12:34 GMT
+      - Thu, 02 Jun 2016 22:12:00 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,66 +63,14 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:12:35 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
       - '278'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240714</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>242198</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:12:35 GMT
-- request:
-    method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240714?format=xml&page=0&pageSize=2147483647&v=version/4
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v0.9.2
-      Accept:
-      - "*/*"
-      Accept-Encoding:
-      - gzip,deflate
-      Date:
-      - Wed, 11 May 2016 04:12:35 GMT
-      Licenseid:
-      - Settings.SCIENCEWIRE.LICENSE_ID
-      Host:
-      - Settings.SCIENCEWIRE.HOST
-      Connection:
-      - Keep-Alive
-      Expect:
-      - 100-continue
-      Content-Type:
-      - text/xml
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Wed, 11 May 2016 04:12:35 GMT
-      Content-Length:
-      - '148'
-    body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
-    http_version: 
-  recorded_at: Wed, 11 May 2016 04:12:35 GMT
+  recorded_at: Thu, 02 Jun 2016 22:12:01 GMT
 recorded_with: VCR 3.0.1
