--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_write_counts_to_log.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/for_valid_author/calls_write_counts_to_log.yml
@@ -5,8 +5,8 @@ http_interactions:
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>          <![CDATA[\n
+      string: "<?xml version=\"1.0\"?>\n    <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n    <xmlQuery>          <![CDATA[\n
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
@@ -28,7 +28,7 @@ http_interactions:
         \             </Criterion>\n                          <Columns>\n              <SortColumn>\n
         \               <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
         \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>200</MaximumRows>\n
-        \           </query>\n\n            ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+        \           </query>\n\n            ]]>\n</xmlQuery>\n    </ScienceWireQueryXMLParameter>"
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -37,7 +37,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:29 GMT
+      - Thu, 02 Jun 2016 22:10:49 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,7 +66,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:29 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
       - '280'
     body:
@@ -75,10 +75,10 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240364</queryID>\r\n
         \ <queryResultRows>16</queryResultRows>\r\n  <totalRows>16</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:29 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:50 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=16&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -90,7 +90,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:29 GMT
+      - Thu, 02 Jun 2016 22:10:50 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -119,7 +119,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:29 GMT
+      - Thu, 02 Jun 2016 22:10:50 GMT
       Content-Length:
       - '40920'
     body:
@@ -581,14 +581,14 @@ http_interactions:
         \   <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:30 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:50 GMT
 - request:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>          <![CDATA[\n
+      string: "<?xml version=\"1.0\"?>\n    <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n    <xmlQuery>          <![CDATA[\n
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
@@ -610,7 +610,7 @@ http_interactions:
         \             </Criterion>\n                          <Columns>\n              <SortColumn>\n
         \               <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
         \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>200</MaximumRows>\n
-        \           </query>\n\n            ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+        \           </query>\n\n            ]]>\n</xmlQuery>\n    </ScienceWireQueryXMLParameter>"
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -619,7 +619,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:30 GMT
+      - Thu, 02 Jun 2016 22:10:50 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -648,7 +648,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:30 GMT
+      - Thu, 02 Jun 2016 22:10:50 GMT
       Content-Length:
       - '280'
     body:
@@ -657,10 +657,10 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240364</queryID>\r\n
         \ <queryResultRows>16</queryResultRows>\r\n  <totalRows>16</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:30 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:51 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=16&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -672,7 +672,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:30 GMT
+      - Thu, 02 Jun 2016 22:10:51 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -701,7 +701,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:30 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
       - '40920'
     body:
@@ -1163,14 +1163,14 @@ http_interactions:
         \   <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:31 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:51 GMT
 - request:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>          <![CDATA[\n
+      string: "<?xml version=\"1.0\"?>\n    <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n    <xmlQuery>          <![CDATA[\n
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
@@ -1192,7 +1192,7 @@ http_interactions:
         \             </Criterion>\n                          <Columns>\n              <SortColumn>\n
         \               <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
         \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>200</MaximumRows>\n
-        \           </query>\n\n            ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+        \           </query>\n\n            ]]>\n</xmlQuery>\n    </ScienceWireQueryXMLParameter>"
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -1201,7 +1201,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:31 GMT
+      - Thu, 02 Jun 2016 22:10:51 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -1230,7 +1230,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:30 GMT
+      - Thu, 02 Jun 2016 22:10:52 GMT
       Content-Length:
       - '280'
     body:
@@ -1239,10 +1239,10 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240364</queryID>\r\n
         \ <queryResultRows>16</queryResultRows>\r\n  <totalRows>16</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:31 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:52 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=16&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -1254,7 +1254,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:31 GMT
+      - Thu, 02 Jun 2016 22:10:52 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -1283,7 +1283,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:32 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
       - '40920'
     body:
@@ -1745,7 +1745,7 @@ http_interactions:
         \   <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:32 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:52 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=46946372,46558063,844542,47593787,54661564,46795732,7877232,5199247
@@ -1760,7 +1760,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:32 GMT
+      - Thu, 02 Jun 2016 22:10:52 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -1789,7 +1789,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:32 GMT
+      - Thu, 02 Jun 2016 22:10:52 GMT
       Content-Length:
       - '22855'
     body:
@@ -2073,7 +2073,7 @@ http_interactions:
         &amp; WILKINS</CopyrightPublisher>\r\n    <CopyrightCity>PHILADELPHIA</CopyrightCity>\r\n
         \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:32 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:53 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -2093,7 +2093,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 11 May 2016 04:09:33 GMT
+      - Thu, 02 Jun 2016 22:10:53 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -2101,12 +2101,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DD02BC732B07D1_0365SID
+      - 08DD6FEF750AEED1_0237SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DD02BC732B07D1_0365SID; domain=.nih.gov; path=/; expires=Thu, 11
-        May 2017 04:09:33 GMT
+      - ncbi_sid=08DD6FEF750AEED1_0237SID; domain=.nih.gov; path=/; expires=Fri, 02
+        Jun 2017 22:10:53 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -3608,5 +3608,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:33 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:58 GMT
 recorded_with: VCR 3.0.1
