--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/creates_ScienceWire_Publications_with_an_array_of_WebOfScience_IDs_for_a_given_author.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/creates_ScienceWire_Publications_with_an_array_of_WebOfScience_IDs_for_a_given_author.yml
@@ -7,8 +7,8 @@ http_interactions:
       encoding: UTF-8
       string: |-
         <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
+            <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <xmlQuery><![CDATA[
               <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                 <Criterion ConjunctionOperator="AND">
                   <Criteria>
@@ -32,7 +32,7 @@ http_interactions:
                   </Columns>
                 </query>
             ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
+            </ScienceWireQueryXMLParameter>
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -41,7 +41,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:46 GMT
+      - Thu, 02 Jun 2016 22:10:33 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -70,7 +70,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:46 GMT
+      - Thu, 02 Jun 2016 22:10:33 GMT
       Content-Length:
       - '277'
     body:
@@ -79,10 +79,10 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>81941</queryID>\r\n
         \ <queryResultRows>3</queryResultRows>\r\n  <totalRows>3</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:47 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:34 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=3&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -94,7 +94,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 04:09:47 GMT
+      - Thu, 02 Jun 2016 22:10:34 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -123,7 +123,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 04:09:48 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
       - '9645'
     body:
@@ -241,7 +241,7 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:48 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:34 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -261,7 +261,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 11 May 2016 04:09:48 GMT
+      - Thu, 02 Jun 2016 22:10:34 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -269,12 +269,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE79FB732B08C1_0302SID
+      - 9DFC71B5750AEDA1_0681SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE79FB732B08C1_0302SID; domain=.nih.gov; path=/; expires=Thu, 11
-        May 2017 04:09:48 GMT
+      - ncbi_sid=9DFC71B5750AEDA1_0681SID; domain=.nih.gov; path=/; expires=Fri, 02
+        Jun 2017 22:10:34 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -968,5 +968,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Wed, 11 May 2016 04:09:49 GMT
+  recorded_at: Thu, 02 Jun 2016 22:10:35 GMT
 recorded_with: VCR 3.0.1
