--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/_id/returns_a_pub_with_valid_bibjson_for_sw_harvested_records.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/_id/returns_a_pub_with_valid_bibjson_for_sw_harvested_records.yml
@@ -5,8 +5,8 @@ http_interactions:
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>          <![CDATA[\n
+      string: "<?xml version=\"1.0\"?>\n    <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n    <xmlQuery>          <![CDATA[\n
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
@@ -28,7 +28,7 @@ http_interactions:
         \             </Criterion>\n                          <Columns>\n              <SortColumn>\n
         \               <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
         \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>200</MaximumRows>\n
-        \           </query>\n\n            ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+        \           </query>\n\n            ]]>\n</xmlQuery>\n    </ScienceWireQueryXMLParameter>"
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -37,7 +37,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 17:07:30 GMT
+      - Thu, 02 Jun 2016 22:11:05 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,7 +66,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 17:07:31 GMT
+      - Thu, 02 Jun 2016 15:53:32 GMT
       Content-Length:
       - '280'
     body:
@@ -75,10 +75,10 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240364</queryID>\r\n
         \ <queryResultRows>16</queryResultRows>\r\n  <totalRows>16</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 17:07:31 GMT
+  recorded_at: Thu, 02 Jun 2016 22:11:06 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=16&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -90,7 +90,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 17:07:31 GMT
+      - Thu, 02 Jun 2016 22:11:06 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -119,7 +119,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 17:07:31 GMT
+      - Thu, 02 Jun 2016 22:11:06 GMT
       Content-Length:
       - '40920'
     body:
@@ -581,7 +581,7 @@ http_interactions:
         \   <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 17:07:31 GMT
+  recorded_at: Thu, 02 Jun 2016 22:11:07 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=46946372,46558063,844542,47593787,54661564,46795732,7877232,5199247
@@ -596,7 +596,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 11 May 2016 17:07:31 GMT
+      - Thu, 02 Jun 2016 22:11:07 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -625,7 +625,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 11 May 2016 17:07:31 GMT
+      - Thu, 02 Jun 2016 22:11:06 GMT
       Content-Length:
       - '22855'
     body:
@@ -909,7 +909,7 @@ http_interactions:
         &amp; WILKINS</CopyrightPublisher>\r\n    <CopyrightCity>PHILADELPHIA</CopyrightCity>\r\n
         \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 11 May 2016 17:07:32 GMT
+  recorded_at: Thu, 02 Jun 2016 22:11:08 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -929,7 +929,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 11 May 2016 17:07:32 GMT
+      - Thu, 02 Jun 2016 22:11:09 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -937,12 +937,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE6D0973366D41_0215SID
+      - 9DFC2F41750AEFD1_0932SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE6D0973366D41_0215SID; domain=.nih.gov; path=/; expires=Thu, 11
-        May 2017 17:07:32 GMT
+      - ncbi_sid=9DFC2F41750AEFD1_0932SID; domain=.nih.gov; path=/; expires=Fri, 02
+        Jun 2017 22:11:09 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -2444,5 +2444,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Wed, 11 May 2016 17:07:33 GMT
+  recorded_at: Thu, 02 Jun 2016 22:11:10 GMT
 recorded_with: VCR 3.0.1
